[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathfinding-framework"
version = "0.1.0"
description = "Deterministic hierarchical pathfinding framework with metagraph memory."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Extremeow" }]
dependencies = ["networkx>=3.2"]

[project.optional-dependencies]
leiden = ["igraph>=0.11", "leidenalg>=0.10"]

[project.scripts]
pfw-run = "pathfinding_framework.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
